<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/edittextback"
    android:padding="5dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Totaldonortx"
            android:text="01"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/profilephoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittextback"
        android:padding="2dp"
        android:scaleType="centerCrop" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Btnprofilephoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/edittextback"
        android:src="@drawable/camera" />
</RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/profilephoto1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="0dp"
                android:background="@drawable/edittextback"
                android:layout_marginBottom="5dp"
                android:padding="2dp"
                android:scaleType="centerCrop" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/Btnprofilephoto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/edittextback"
                android:src="@drawable/camera" />
        </RelativeLayout>




        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittextback"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/NameOfWriter"
                android:padding="5dp"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittextback"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/name" />
            <EditText
                android:id="@+id/Businesstype"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/NameOfStory"
                android:hint="Story Type"
                android:padding="5dp"
                android:textAllCaps="true"
                android:textColorHighlight="@color/black"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittextback"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/name" />
            <EditText
                android:id="@+id/NameOfWriter"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/NameOfStory"
                android:hint="@string/NameOfCardHolder"
                android:padding="5dp"
                android:textAllCaps="true"
                android:textColorHighlight="@color/black"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittextback"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/phone" />



            <EditText
                android:id="@+id/NameOfStory"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:nextFocusDown="@id/Part"
                android:padding="5dp"
                android:hint="@string/CardHolderPhone"
                android:textColorHighlight="@color/black"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittextback"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/email" />



            <EditText
                android:id="@+id/Part"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/mainBuinss"
                android:padding="5dp"
                android:hint="@string/Useremail"
                android:textColorHighlight="@color/black"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittextback"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/address" />



            <EditText
                android:id="@+id/mainBuinss"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/PUrl"
                android:padding="5dp"
                android:hint="Your Main Business"
                android:textColorHighlight="@color/black"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/Scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittextback"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp">


                <EditText
                    android:id="@+id/PUrl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:hint="User Personal Url/link/websitr etc"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/textviewprogress"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/buttonbackround"
                        android:gravity="center"
                        android:padding="9dp"
                        android:text="0.00"
                        android:textColor="#C64F29" />

                    <ProgressBar
                        android:visibility="visible"
                        android:id="@+id/Progressbar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="40dp" />

                    <Button
                        android:id="@+id/SaveBTN"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btnback"
                        android:fontFamily="@font/aclonica"
                        android:text="Save Data"
                        android:textColor="#043D6A"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>